--- a/InventoryManager/src/Supplier/viewSupplier.html
+++ b/InventoryManager/src/Supplier/viewSupplier.html
@@ -127,29 +127,21 @@
             </div>
             <br /><br />
         </fieldset>
-        <div class="row align-items-center">
-            <div class="col-2">
-                <button id="btnDelete" hidden="true" type="button" class="btn btn-danger col"
-                    onclick="supplierTableF.delete()"><i class="fa-solid fa-trash"></i> Delete </button>
+
+        <div class="row my-3">
+            <div class="col-10">
+                <button id="btnDelete" type="button" class="btn btn-danger col" onclick="supplierTableF.delete()"><i
+                    class="fa-solid fa-trash"></i> Delete </button>
                 <button id="btnCancel" type="button" class="btn btn-secondary col" onclick="supplierTableF.cancel()"><i
-                        class="fa-solid fa-cancel"></i> Cancel </button>
+                        class="fa-solid fa-cancel"></i> Cancel </button> 
             </div>
-            <div class="col">
+            <div class="col-2">
+                <button id="btnEdit"  type="button" class="btn btn-primary col" onclick="supplierTableF.edit()"><i
+                    class="fa-solid fa-pencil"></i> Edit </button>
+            <button id="btnSave" hidden="true" type="button" class="btn btn-primary col" onclick="supplierTableF.save()"><i
+                    class="fa-solid fa-save"></i> Save </button>
             </div>
-            <div class="col">
-            </div>
-            <div class="col">
-            </div>
-            <div class="col">
-            </div>
-            <div class="col">
-            </div>
-            <div class="col">
-                <button id="btnEdit" hidden="true" type="button" class="btn btn-primary col"
-                    onclick="supplierTableF.edit()"><i class="fa-solid fa-pencil"></i> Edit </button>
-                <button id="btnSave" hidden="true" type="button" class="btn btn-primary col"
-                    onclick="supplierTableF.save()"><i class="fa-solid fa-save"></i> Save </button>
-            </div>
+            <br />          
         </div>
     </form>
     <br />
