Fix Persons View and Footer

--- a/InventoryManager/src/Main/Main.html
+++ b/InventoryManager/src/Main/Main.html
@@ -23,9 +23,11 @@
         <header>
             <div include-html="../Commons/views/Header.html"></div>
         </header>
-        <div id="principalContent"></div>
+        <main id="principalContent"></main>
+        <div>
+            <div include-html="../Commons/views/Footer.html"></div>
+        </div>
     </div>
-    <div include-html="../Commons/views/Footer.html"></div>
 </body>
 
 <!-- ✅ load popper.js ✅ -->
