--- a/InventoryManager/src/Person/IndexPerson.html
+++ b/InventoryManager/src/Person/IndexPerson.html
@@ -22,38 +22,36 @@
     </div>
     <div class="container">
         <div class="row align-items-center">
-            <div class="col-4"> 
+            <div class="col-4">
             </div>
             <div class="col-4">
                 <div class="input-group mb-3">
                     <div class="input-group-prepend">
-                        <span class="input-group-text"><i
-                                class="fas fa-search"></i></span>
+                        <span class="input-group-text"><i class="fas fa-search"></i></span>
                     </div>
-                    <input type="text" id="myInput" onkeyup="personTableF.filterTable()" class="form-control" placeholder="Search person by..."
-                        aria-label="Search person by..." aria-describedby="basic-addon1">
+                    <input type="text" id="myInput" onkeyup="personTableF.filterTable()" class="form-control"
+                        placeholder="Search person by..." aria-label="Search person by..."
+                        aria-describedby="basic-addon1">
                 </div>
             </div>
         </div>
     </div>
     <div class="col-4">
     </div>
-
+    <table id="personTable">
+        <thead>
+            <tr>
+                <th>ID</th>
+                <th>Type</th>
+                <th>Department</th>
+                <th>Full Name</th>
+                <th style="width:150px;">Action</th>
+            </tr>
+        </thead>
+        <tbody>
+        </tbody>
+    </table>
 </div>
-</div>
-<table id="personTable">
-    <thead>
-        <tr>
-            <th>ID</th>
-            <th>Type</th>
-            <th>Department</th>
-            <th>Full Name</th>
-            <th style="width:150px;">Action</th>
-        </tr>
-    </thead>
-    <tbody>
-    </tbody>
-</table>
 <script>
     try {
         mainF.configs;
