created Customer table

--- a/InventoryManager/src/Shared/Header/headex.html
+++ b/InventoryManager/src/Shared/Header/headex.html
@@ -35,7 +35,7 @@
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="#" onclick="relocateFnc(3)" id="orders"
-						>Oders</a
+						>Orders</a
 					>
 				</li>
 				<li class="nav-item">
@@ -52,9 +52,13 @@
 					>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#" onclick="relocateFnc(8)" id="customers"
-						>Customers</a
+					<a class="nav-link" href="#" onclick="relocateFnc(8)" id="Person"
+						>Person</a
 					>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#" onclick="relocateFnc(9)" id="Customer"
+						>Customers</a>
 				</li>
 			</ul>
 		</div>
