new changes on order table

--- a/InventoryManager/src/Order/ViewOrder.html
+++ b/InventoryManager/src/Order/ViewOrder.html
@@ -18,9 +18,15 @@
             </div>
             <div class="row p-1">
                 <div class="col">
-                    <label><strong>Supplier: </strong></label>
-                    <label class="viewData" data-bind="supplier" id="supNameView"></label>
-                    <label class="editData" data-bind="supplier" hidden id="supNameEdit"></label>
+                    <label><strong>Customer: </strong></label>
+                    <label class="viewData" data-bind="customer" id="custFirstNameView"></label>
+                    <label class="viewData" data-bind="customer" id="custLastNameView"></label>
+                    <label class="editData" data-bind="customer" hidden id="custFirstNameEdit"></label>
+                    <label class="editData" data-bind="customer" hidden id="custLastNameEdit"></label>
+                    <label><strong>Email: </strong></label>
+                    <label class="viewData" data-bind="customer" id="custEmailView"></label>
+                    <label class="editData" data-bind="customer" hidden id="custEmailEdit"></label>
+
                 </div>
                 <div class="col">
                     <label><strong>Status: </strong></label>
