--- a/InventoryManager/src/Order/newOrder.html
+++ b/InventoryManager/src/Order/newOrder.html
@@ -10,11 +10,14 @@
 			<legend>*Request to</legend>
 			<div class="row p-1">
 				<div class="col">
-					<label for="sName">*Supplier Name</label>
-					<input id="sName" name="sName" placeholder="Supplier Name" type="text" required />
+					<label for="sName">*Customer FirstName</label>
+					<input id="sName" name="sName" placeholder="Customer FirstName" type="text" required />
 				
-					<label for="detail">Supplier Address</label>
-					<input id="address" name="address" placeholder="Supplier Address" type="text" />
+					<label for="sName">*Customer LastName</label>
+					<input id="sName" name="sName" placeholder="Customer LastName" type="text" required />
+	
+					<label for="detail">Customer Address</label>
+					<input id="address" name="address" placeholder="Customer Address" type="text" />
 				</div>
 				<div class="col">
 					<label for="email">*Email</label>
@@ -24,7 +27,7 @@
 					<input id="telephone" name="telephone" placeholder="289 123 4567" type="tel" required/>
 				</div>
 				<div class="col">
-					<label for="ext">Supplier External Number</label>
+					<label for="ext">Customer Order Number</label>
 					<input id="ext" name="ext" placeholder="#6754362" type="number" />
 				
 					<label for="date">Creation Date</label>
