--- a/InventoryManager/src/Customers/ViewCustomer.html
+++ b/InventoryManager/src/Customers/ViewCustomer.html
@@ -34,8 +34,11 @@
                     </div>
                     <div>
                         <label class="viewData" data-bind="phone"></label>
-                        <input id="telephone" data-bind="phone" name="telephone" placeholder="905 735 2211" type="tel"
-                            hidden="true" class="editData" required />
+                        <div class="form-floating editData" hidden="true">
+                            <input id="telephone" data-bind="phone" class="form-control form-control-sm" placeholder="905 735 2211" type="tel"
+                            class="editData form-control" required>
+                            <label for="telephone">EG: 905 735 2211</label>
+                        </div>
                     </div>
                 </div>
                 <div class="col">
@@ -44,22 +47,40 @@
                     </div>
                     <div>
                         <label class="viewData" data-bind="email"></label>
-                        <input id="email" data-bind="email" name="email" placeholder="email@domain.com" type="email"
-                            hidden="true" class="editData" />
+                        <div class="form-floating editData" hidden="true">
+                            <input type="email" data-bind="email" class="form-control form-control-sm" id="email" placeholder="email@domain.com">
+                            <label for="email">EG: email@domain.com</label>
+                          </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <div>
+                            <Label><strong>Postal Code:</strong></Label>
+                        </div>
+                        <div>
+                            <label class="viewData" data-bind="postalCode"></label>
+                            <div class="form-floating editData" hidden="true">
+                                <input type="text" placeholder="M9A 2R6" id="postalCode" class="form-control form-control-sm"
+                                    pattern="[A-Za-z][0-9][A-Za-z][ ][0-9][A-Za-z][0-9]" data-bind="postalCode"
+                                    title="Six digit zip code M9A 2R6" class="editData">
+                                <label for="postalCode">EG: M9A 2R6</label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div>
+                            <label for="Street"><strong>Street:</strong></label>
+                        </div>
+                        <div>
+                            <label class="viewData" data-bind="street"></label>
+                            <input id="Street" data-bind="street" name="Street" placeholder="Street No." type="text"
+                                hidden="true" class="editData" />
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="row">
-                <div class="col">
-                    <div>
-                        <label for="Street"><strong>Street:</strong></label>
-                    </div>
-                    <div>
-                        <label class="viewData" data-bind="street"></label>
-                        <input id="Street" data-bind="street" name="Street" placeholder="Street No." type="text"
-                            hidden="true" class="editData" />
-                    </div>
-                </div>
                 <div class="col">
                     <div>
                         <label for="City"><strong>*City:</strong></label>
@@ -68,8 +89,6 @@
                     <input type="text" placeholder="Toronto" id="City" name="City" data-bind="city" hidden="true"
                         class="editData" autocomplete="on" required />
                 </div>
-            </div>
-            <div class="row">
                 <div class="col">
                     <div>
                         <Label><strong>Province:</strong></Label>
@@ -115,21 +134,9 @@
                         </option>
                     </select>
                 </div>
-                <div class="col">
-                    <div>
-                        <Label><strong>Postal Code:</strong></Label>
-                    </div>
-                    <div>
-                        <label class="viewData" data-bind="postalCode"></label>
-                        <input type="text" placeholder="M9A 2R6" id="postalCode"
-                            pattern="[A-Za-z][0-9][A-Za-z][ ][0-9][A-Za-z][0-9]" data-bind="postalCode"
-                            title="Six digit zip code M9A 2R6" hidden="true" class="editData" />
-                    </div>
-                </div>
             </div>
             <br />
         </fieldset>
-
         <div class="row align-items-center">
             <div class="col-2">
                 <button id="btnDelete" hidden="true" type="button" class="btn btn-danger col"
