--- a/InventoryManager/src/Invoice/ViewInvoice.html
+++ b/InventoryManager/src/Invoice/ViewInvoice.html
@@ -31,13 +31,26 @@
                         <option value="Cancelled">Cancelled</option>
                         <option value="Pending">Pending</option>
                     </select>
+                    <a href="#collapseHelp" data-bs-toggle="collapse" href="#collapseHelp" role="button" aria-expanded="false" aria-controls="collapseHelp">
+                        <i class="fa-solid fa-circle-info" title="General Delivery Status of the order"></i>
+                    </a>
+					<div class="collapse bg-primary text-white" id="collapseHelp">
+						<span>General Delivery Status of the order</span>
+					</div>
                 </div>
             </div>
             <div class="row p-1">
                 <div class="col">
-                    <label><strong>External Number ID: </strong></label>
+                    <label><strong>External Number ID:
+                    </strong></label>
                     <label class="viewData" data-bind="invoiceExternalNumber"></label>
                     <input type="number" hidden class="editData" data-bind="invoiceExternalNumber" />
+                    <a href="#collapseHelp2" data-bs-toggle="collapse" href="#collapseHelp2" role="button" aria-expanded="false" aria-controls="collapseHelp2">
+                        <i class="fa-solid fa-circle-info" title="ID number assigned by the supplier ordering system"></i>
+                    </a>
+					<div class="collapse bg-primary text-white" id="collapseHelp2">
+						<span>ID number assigned by the supplier ordering system. Used for tracking purposes</span>
+					</div>
                 </div>
                 <div class="col">
                     <label><strong>Sub Status: </strong></label>
@@ -48,6 +61,12 @@
                         <option value="Cancelled">Cancelled</option>
                         <option value="Pending">Pending</option>
                     </select>
+                    <a href="#collapseHelp3" data-bs-toggle="collapse" href="#collapseHelp3" role="button" aria-expanded="false" aria-controls="collapseHelp3">
+                        <i class="fa-solid fa-circle-info" title="Specific Delivery Status of the order"></i>
+                    </a>
+					<div class="collapse bg-primary text-white" id="collapseHelp3">
+						<span>Specific Delivery Status of the order</span>
+					</div>
                 </div>
             </div>
             <br>
@@ -93,6 +112,12 @@
                     <label><strong>Order Completion Date: </strong></label>
                     <label class="viewData" data-bind="invoiceArriveDate">2022-07-22</label>
                     <input type="date" hidden class="editData" data-bind="invoiceArriveDate"/>
+                    <a href="#collapseHelp4" data-bs-toggle="collapse" href="#collapseHelp4" role="button" aria-expanded="false" aria-controls="collapseHelp4">
+                        <i class="fa-solid fa-circle-info" title="Date when all items in order were delivered in full"></i>
+                    </a>
+					<div class="collapse bg-primary text-white" id="collapseHelp4">
+						<span>Date when all items in order were "Complete Delivered"</span>
+					</div>
                 </div>
 
             </div>
