--- a/InventoryManager/src/Order/newOrder.html
+++ b/InventoryManager/src/Order/newOrder.html
@@ -68,7 +68,7 @@
 						</tr>
 						<tr>
 							<td>2</td>
-							<td><input type="text" name='itemName' /></td>
+							<td><input type="text" name='itemName' onkeypress="function22()" id="itemName2"/></td>
 							<td><input type="text" name='itemDescription' /></td>
 							<td><input type="number" class="Qty" min="0" name='itemQuantity' /></td>
 							<td><input type="number" class="unitPrice" min="0" name='unitPrice' /></td>
