--- a/InventoryManager/src/Inventory/ViewInventory.html
+++ b/InventoryManager/src/Inventory/ViewInventory.html
@@ -1,53 +1,62 @@
 <section id="inventorySection">
-    <form id = "formInventory">
-        <h2 id= "title">New Item</h2>
+    <form id="formInventory">
+        <h2 id="title">New Item</h2>
         <fieldset style="margin: 25px 5px;">
             <legend>General Information Item:</legend>
             <div class="row">
                 <div class="col">
                     <div>
-                        <label for="prodID"><strong>*prodID:</strong></label>
+                        <label for="prodID"><strong>*ProdID:</strong></label>
                     </div>
                     <div>
                         <label class="viewData" data-bind="productID"></label>
-                        <input class="editData" hidden="true" id="prodID" data-bind="productID" name="prodID" placeholder="Product Id" type="number"
-                            required />
+                        <input class="editData" hidden="true" id="prodID" data-bind="productID" name="prodID"
+                            placeholder="Product Id" type="number" required />
+                    </div>
+                </div>
+                <div class="col">
+                    <div>
+                        <label for="quantity"><strong>*Quantity:</strong></label>
+                    </div>
+                    <div>
+                        <label class="viewData" data-bind="inventoryQty"></label>
+                        <input class="editData" hidden="true" id="quantity" data-bind="inventoryQty" name="quantity"
+                            placeholder="Quantity" type="number" required />
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col">
                     <div>
-                        <label for="quantity"><strong>*quantity:</strong></label>
+                        <label for="cost"><strong>*Cost:</strong></label>
                     </div>
                     <div>
-                        <label class="viewData" data-bind="inventoryQty"></label>
-                        <input class="editData" hidden="true" id="quantity" data-bind="inventoryQty" name="quantity" placeholder="Quantity" type="number"
-                            required />
+                        <label class="viewData" data-bind="inventoryCost"></label>
+                        <div class="form-floating editData" hidden="true">
+                            <input id="cost" data-bind="inventoryCost" class="form-control form-control-sm"
+                                placeholder="CA$ 200.00" type="number" class="editData form-control" required>
+                            <label for="cost">EG: CA$ 200.00</label>
+                        </div>
                     </div>
                 </div>
                 <div class="col">
                     <div>
-                        <label for="cost"><strong>*cost:</strong></label>
+                        <label for="Price"><strong>*Price:</strong></label>
                     </div>
                     <div>
-                        <label class="viewData" data-bind="inventoryCost"></label>
-                        <input class="editData" hidden="true" id="cost" data-bind="inventoryCost" name="cost" placeholder="Item cost" type="number"
-                            required />
+                        <label class="viewData" data-bind="inventoryPrice"></label>
+                        <div class="form-floating editData" hidden="true">
+                            <input id="Price" data-bind="inventoryPrice" class="form-control form-control-sm"
+                            placeholder="CA$ 200.00" type="number" class="editData form-control" required>
+                            <label for="Price">EG: CA$ 1000.00</label>
+                        </div>
                     </div>
+
                 </div>
             </div>
-            <div class="two-col m-2">
-                <div>
-                    <label for="Price"><strong>*Price:</strong></label>
-                </div>
-                <div>
-                    <label class="viewData" data-bind="inventoryPrice"></label>
-                    <input class="editData" hidden="true" id="Price" data-bind="inventoryPrice" name="Price" placeholder="Item Price" type="number" required />
-                </div>
-                
-            </div>
-            <br /><br />
+        </fieldset>
+        </div>
+        <br /><br />
         </fieldset>
         <fieldset>
             <legend>Control Information Item:</legend>
@@ -58,8 +67,8 @@
                     </div>
                     <div>
                         <label class="viewData" data-bind="inventoryMaxStorage"></label>
-                        <input class="editData" hidden="true" id="Maximum" data-bind="inventoryMaxStorage" name="Maximum" placeholder="Maximum in storage" type="number"
-                            required />
+                        <input class="editData" hidden="true" id="Maximum" data-bind="inventoryMaxStorage"
+                            name="Maximum" placeholder="Maximum in storage" type="number" required />
                     </div>
                 </div>
                 <div class="col">
@@ -68,7 +77,8 @@
                     </div>
                     <div>
                         <label class="viewData" data-bind="inventoryCreatedAt"></label>
-                        <input class="editData" hidden="true" id="CreatedAt" data-bind="inventoryCreatedAt" name="CreatedAt" placeholder="Item creation date" type="date" required />
+                        <input class="editData" hidden="true" id="CreatedAt" data-bind="inventoryCreatedAt"
+                            name="CreatedAt" placeholder="Item creation date" type="date" required />
                     </div>
                 </div>
             </div>
@@ -79,8 +89,8 @@
                     </div>
                     <div>
                         <label class="viewData" data-bind="inventoryAlertStorage"></label>
-                        <input class="editData" hidden="true" id="Minimum" data-bind="inventoryAlertStorage" name="Minimum" placeholder="Minimum in storage" type="number"
-                            required />
+                        <input class="editData" hidden="true" id="Minimum" data-bind="inventoryAlertStorage"
+                            name="Minimum" placeholder="Minimum in storage" type="number" required />
                     </div>
                 </div>
                 <div class="col">
@@ -89,7 +99,8 @@
                     </div>
                     <div>
                         <label class="viewData" data-bind="inventoryUpdateAt"></label>
-                        <input class="editData" hidden="true" id="UpdateAt" data-bind="inventoryUpdateAt" name="UpdateAt" placeholder="Item update" type="date" required />
+                        <input class="editData" hidden="true" id="UpdateAt" data-bind="inventoryUpdateAt"
+                            name="UpdateAt" placeholder="Item update" type="date" required />
                     </div>
                 </div>
             </div>
@@ -101,8 +112,8 @@
         </fieldset>
         <div class="row align-items-center">
             <div class="col-2">
-                <button id="btnDelete" hidden="true" type="button" class="btn btn-danger col" onclick="viewInventoryF.delete()"><i
-                        class="fa-solid fa-trash"></i> Delete </button>
+                <button id="btnDelete" hidden="true" type="button" class="btn btn-danger col"
+                    onclick="viewInventoryF.delete()"><i class="fa-solid fa-trash"></i> Delete </button>
                 <button id="btnCancel" type="button" class="btn btn-secondary col" onclick="viewInventoryF.cancel()"><i
                         class="fa-solid fa-cancel"></i> Cancel </button>
             </div>
@@ -117,14 +128,14 @@
             <div class="col">
             </div>
             <div class="col">
-                <button id="btnEdit" hidden="true" type="button" class="btn btn-primary col" onclick="viewInventoryF.edit()"><i
-                        class="fa-solid fa-pencil"></i> Edit </button>
-                <button id="btnSave" hidden="true" type="button" class="btn btn-primary col" onclick="viewInventoryF.save()"><i
-                        class="fa-solid fa-save"></i> Save </button>
+                <button id="btnEdit" hidden="true" type="button" class="btn btn-primary col"
+                    onclick="viewInventoryF.edit()"><i class="fa-solid fa-pencil"></i> Edit </button>
+                <button id="btnSave" hidden="true" type="button" class="btn btn-primary col"
+                    onclick="viewInventoryF.save()"><i class="fa-solid fa-save"></i> Save </button>
             </div>
         </div>
     </form>
-    <br/>
+    <br />
     <script>
         try {
             mainF.configs;
